# think-out

./: com.example.ThinkOut.json  meson.build
data/: com.example.ThinkOut.appdata.xml.in  com.example.ThinkOut.desktop.in  com.example.ThinkOut.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  think-out-application.c  think-out-application.h  think-out-window.c  think-out-window.h  think-out-window.ui  think-out.gresource.xml
